fixed invisible post button on feed

--- a/c01/src/FeedComponents/Feed.css
+++ b/c01/src/FeedComponents/Feed.css
@@ -106,3 +106,8 @@ border-color: transparent;
   margin-right: 100px;
 }
 
+.btn_post_blog{
+  background: cornflowerblue;
+  margin-left: 20px;
+  margin-bottom:13px;
+}
